# GEOscope

./: .dockerignore  .env.elasticsearch.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.elasticsearch.yml  pyproject.toml
.claude/: launch.json
.do/: app.yaml.tmpl
deploy/: app-platform.env.example  geo-mcp.env.example
deploy/elasticsearch/: bootstrap-ubuntu.sh  docker-compose.production.yml  elasticsearch.env.example  vector.yaml
docs/deployment/: digitalocean.md
docs/superpowers/plans/: 2026-07-11-canonical-embedding-artifacts.md  2026-07-11-prefect-soft-etl.md  (+20 more)
eval/: elasticsearch-live-comparison.md  elasticsearch_live_queries.jsonl  unified_search_queries.jsonl
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  styles.css
src/geo_index/: __init__.py  adopt_embeddings.py  assay_rules.py  build_embedding_artifact.py  build_embeddings.py  build_series_docs.py  elasticsearch_cli.py  elasticsearch_config.py  elasticsearch_index.py  elasticsearch_live_compare.py  elasticsearch_loader.py  elasticsearch_query_embeddings.py  elasticsearch_runtime.py  elasticsearch_search.py  elasticsearch_sources.py  embedding_artifacts.py  embedding_gemini.py  embedding_local.py  embedding_registry.py  environment.py  eutils.py  facets.py  fetch_soft.py  fetch_summaries.py  geo_web.py  log_export.py  marketing_api.py  mcp_auth.py  mcp_models.py  mcp_search_service.py  mcp_server.py  mcp_settings.py  ncbi_search.py  normalize.py  pg_hybrid.py  prefect_etl.py  production_app.py  reranker.py  search_candidates.py  search_eval.py  (+7 more)
tests/: test_adopt_embeddings.py  test_app_platform_config.py  test_assay_rules.py  test_build_embedding_artifact.py  test_elasticsearch_cli.py  test_elasticsearch_config.py  test_elasticsearch_index.py  test_elasticsearch_live.py  test_elasticsearch_live_compare.py  test_elasticsearch_loader.py  test_elasticsearch_query_embeddings.py  test_elasticsearch_runtime.py  test_elasticsearch_search.py  test_elasticsearch_sources.py  test_embedding_artifacts.py  test_embedding_gemini.py  test_embedding_local.py  test_environment_loading.py  test_eutils.py  test_facets.py  test_log_export.py  test_marketing_api.py  test_mcp_auth.py  test_mcp_elasticsearch_smoke.py  test_mcp_http.py  test_mcp_models.py  test_mcp_packaging.py  test_mcp_search_service.py  test_mcp_server.py  test_mcp_settings.py  test_ncbi_search.py  test_normalize.py  test_pg_hybrid.py  test_prefect_etl.py  test_primary_path_docs.py  test_production_app.py  test_production_elasticsearch_config.py  test_production_packaging.py  test_reranker.py  test_reranker_live.py  (+8 more)
wiki/: 00-Overview.md  10-GEO-Data-Model.md  11-The-Metadata-Problem.md  20-Architecture-Overview.md  21-Ingestion-Pipeline.md  22-Ontology-Normalization.md  23-Search-and-Retrieval.md  24-Faceted-Search.md  25-Embeddings-and-Cost.md  26-Datastore-Postgres.md  27-MCP-Interface.md  28-Embedding-Granularity.md  30-Prior-Art.md  40-Roadmap.md  41-Open-Questions.md  42-Build-Log.md  43-Tissue-Candidate-Generation-Plan.md  44-Normalization-Tests-and-Assay-Hardening-Plan.md  45-Normalized-Filters-and-Facets-Plan.md  46-Retrieval-Evaluation-Plan.md  47-MCP-Server-Plan.md  48-Alternate-Embedding-Bakeoff.md  49-Alternate-Embedding-Bakeoff-Implementation-Plan.md  50-Coworker-Handoff-Prompts.md  51-Search-Database-Bakeoff-and-Elasticsearch-Plan.md  52-Embedding-Bakeoff-Runbook.md  53-Prefect-SOFT-ETL-and-Embedding-Prototype-Plan.md  54-Incremental-Corpus-Future-State.md  55-Prefect-and-Local-Elasticsearch-Coworker-Prompts.md  56-GEO-Full-Corpus-Crawl-Runbook.md  57-Canonical-Production-Pipeline.md  58-GEOscope-Marketing-and-Live-Demo.md  90-Glossary.md  99-Sources.md  CLAUDE.md  Home.md
(+36 files in other folders)
