[project]
name = "geo-metadata-index"
version = "0.1.0"
description = "Metadata index + search service over NCBI GEO (v1 spike)"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.9.0",
    "httpx>=0.27",
    "numpy>=2,<3",
    "pgvector>=0.5.0",
    "prefect>=3,<4",
    "psycopg[binary]>=3.3.4",
    "sentence-transformers>=5.6.0",
]

[project.scripts]
geo-fetch-summaries = "geo_index.fetch_summaries:main"
geo-fetch-soft = "geo_index.fetch_soft:main"
geo-strip-soft = "geo_index.strip_soft_tables:main"
geo-validate-soft = "geo_index.validate_soft:main"
geo-build-series-docs = "geo_index.build_series_docs:main"
geo-embed = "geo_index.build_embeddings:main"
geo-search = "geo_index.search_test:main"
geo-normalize = "geo_index.normalize:main"
geo-soft-browser = "geo_index.soft_browser.server:main"
geo-soft-etl = "geo_index.prefect_etl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_index"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["integration: requires the local GEO Postgres database"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
