[project]
name = "geo-metadata-index"
version = "0.1.0"
description = "Metadata index + search service over NCBI GEO (v1 spike)"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=9.4,<10",
    "fastapi>=0.135,<1",
    "fastmcp>=3.4.4,<4",
    "google-genai>=2.9.0",
    "httpx>=0.27",
    "numpy>=2,<3",
    "pgvector>=0.5.0",
    "prefect>=3,<4",
    "psycopg[binary]>=3.3.4",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
geo-fetch-summaries = "geo_index.fetch_summaries:main"
geo-fetch-soft = "geo_index.fetch_soft:main"
geo-strip-soft = "geo_index.strip_soft_tables:main"
geo-validate-soft = "geo_index.validate_soft:main"
geo-build-series-docs = "geo_index.build_series_docs:main"
geo-embed = "geo_index.build_embeddings:main"
geo-search = "geo_index.elasticsearch_cli:main"
geo-web = "geo_index.web:main"
geoscope-web = "geo_index.marketing_api:main"
geo-normalize = "geo_index.normalize:main"
geo-soft-browser = "geo_index.soft_browser.server:main"
geo-elasticsearch-load = "geo_index.elasticsearch_loader:main"
geo-elasticsearch-compare = "geo_index.elasticsearch_live_compare:main"
geo-soft-etl = "geo_index.prefect_etl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_index"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "integration: requires the local GEO Postgres database",
    "elastic_integration: requires local Elasticsearch and GEO_TEST_ELASTIC=1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1,<2",
]
